--- a/index.html
+++ b/index.html
@@ -33,7 +33,12 @@
 				<!-- <ul class="actions">
 					<li><a href="#" class="button special big">Get Started</a></li>
 				</ul> -->
+				<form class="form-wrapper cf">
+  					<input type="text" placeholder="Search here..." required>
+	  				<button type="submit">Search</button>
+				</form>
 			</section>
+			
 
 			<!-- One -->
 
@@ -50,14 +55,9 @@
 		<!-- Footer -->
 			<footer id="footer">
 				<div class="container">
-					<ul class="icons">
-						<li><a href="https://www.facebook.com/pages/Col%C3%A9gio-Em%C3%ADlia-Ferreiro/113000642111819" class="icon fa-facebook"></a></li>
-						<li><a href="#" class="icon fa-twitter"></a></li>
-						<li><a href="#" class="icon fa-instagram"></a></li>
-					</ul>
 					<ul class="copyright">
 						<li class="icon fa-map-marker">
-							<a style="cursor: pointer;">DCC - Belo Horizonte/MG</a>
+							<a style="cursor: pointer;">ASERG</a>
 						</li>
 						<li class="icon fa-phone"><a style="cursor: pointer;">(31) 0000-0000</a></li>
 						<li class="icon fa-envelope"><a style="cursor: pointer;">mail@mail.com.br</a></li>
