--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
 		<!-- Banner -->
 			<section id="banner">
 				<h2>OSS Project Health</h2>
-				<p>Supporting your decision to use open source software.</p>
+				<p>Supporting your decision to use open source software</p>
 				<!-- <ul class="actions">
 					<li><a href="#" class="button special big">Get Started</a></li>
 				</ul> -->
 				<form class="form-wrapper cf">
-  					<input type="text" placeholder="Search here..." required>
+  					<input type="text" placeholder="Search for a project..." required>
 	  				<button type="submit">Search</button>
 				</form>
 			</section>
