--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE HTML>
 <!--
 	Spatial by TEMPLATED
 	templated.co @templatedco
@@ -10,6 +9,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/auto-complete.css" />
 	</head>
 	<body class="landing">
 
@@ -33,8 +33,8 @@
 				<!-- <ul class="actions">
 					<li><a href="#" class="button special big">Get Started</a></li>
 				</ul> -->
-				<form class="form-wrapper cf">
-  					<input type="text" placeholder="Search for a project..." required>
+				<form onsubmit="return false;" class="pure-form form-wrapper cf" >
+  					<input type="text"  type="text" name="q" placeholder="Search for a project..." id="hero-demo" required>
 	  				<button type="submit">Search</button>
 				</form>
 			</section>
@@ -53,23 +53,152 @@
 		
 
 		<!-- Footer -->
+
 			<footer id="footer">
+<div class="image logo">
+<img src="images/logo-aserg.png"  />
+</div>
+
 				<div class="container">
 					<ul class="copyright">
+
 						<li class="icon fa-map-marker">
-							<a style="cursor: pointer;">ASERG</a>
+							<a href="https://www.google.com/maps?ll=-19.869066,-43.963814&spn=0.002951,0.005284&t=k&om=1&z=18&layer=c&cbll=-19.869487,-43.964132&panoid=3J23bl2vHo3-uZWvYn8_-A&cbp=12,334.08,,0,-7.13" style="cursor: pointer;">Address</a>
 						</li>
-						<li class="icon fa-phone"><a style="cursor: pointer;">(31) 0000-0000</a></li>
-						<li class="icon fa-envelope"><a style="cursor: pointer;">mail@mail.com.br</a></li>
+						<li class="icon fa-phone"><a style="cursor: pointer;">+55 (31) 3409-5860</a></li>
+						<li class="icon fa-envelope"><a style="cursor: pointer;">mtov (at) dcc.ufmg.br</a></li>
 					</ul>
 				</div>
 			</footer>
 
 		<!-- Scripts -->
+			<script src="assets/js/auto-complete.min.js"></script>
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script src="assets/js/jquery.csv.min.js"></script>
+			<script src="assets/js/jquery.csv.js"></script>
+<script>
+        var demo1 = new autoComplete({
+            selector: '#hero-demo',
+            minChars: 1,
+            source: function(term, suggest){
+                term = term.toLowerCase();
+
+		var csv = require('fast-csv');
+
+		csv.fromPath('assets/csv/projects-grades.csv')
+		  .on('data', function(data) {
+
+		    // `data` is an array containing the values
+		    // of the current line in the file
+		    console.log(data);
+		  })
+		  .on('end', function() {
+		    console.log('Parsing complete!');
+		  });
+		  console.log(csv); // [{"Hello": "world"}, …]
+		
+		
+
+
+                var suggestions = [];
+                for (i=0;i<choices.length;i++)
+                    if (~choices[i].toLowerCase().indexOf(term)) suggestions.push(choices[i]);
+                suggest(suggestions);
+            }
+        });
+
+        var demo2 = new autoComplete({
+            selector: '#advanced-demo',
+            minChars: 0,
+            source: function(term, suggest){
+                term = term.toLowerCase();
+                var choices = [['Australia', 'au'], ['Austria', 'at'], ['Brasil', 'br'], ['Bulgaria', 'bg'], ['Canada', 'ca'], ['China', 'cn'], ['Czech Republic', 'cz'], ['Denmark', 'dk'], ['Finland', 'fi'], ['France', 'fr'], ['Germany', 'de'], ['Hungary', 'hu'], ['India', 'in'], ['Italy', 'it'], ['Japan', 'ja'], ['Netherlands', 'nl'], ['Norway', 'no'], ['Portugal', 'pt'], ['Romania', 'ro'], ['Russia', 'ru'], ['Spain', 'es'], ['Swiss', 'ch'], ['Turkey', 'tr'], ['USA', 'us']];
+                var suggestions = [];
+                for (i=0;i<choices.length;i++)
+                    if (~(choices[i][0]+' '+choices[i][1]).toLowerCase().indexOf(term)) suggestions.push(choices[i]);
+                suggest(suggestions);
+            },
+            renderItem: function (item, search){
+                search = search.replace(/[-\/\\^$*+?.()|[\]{}]/g, '\\$&amp;');
+                var re = new RegExp("(" + search.split(' ').join('|') + ")", "gi");
+                return '<div class="autocomplete-suggestion" data-langname="'+item[0]+'" data-lang="'+item[1]+'" data-val="'+search+'"><img src="img/'+item[1]+'.png"> '+item[0].replace(re, "<b>$1</b>")+'</div>';
+            },
+            onSelect: function(e, term, item){
+                console.log('Item "'+item.getAttribute('data-langname')+' ('+item.getAttribute('data-lang')+')" selected by '+(e.type == 'keydown' ? 'pressing enter' : 'mouse click')+'.');
+                document.getElementById('advanced-demo').value = item.getAttribute('data-langname')+' ('+item.getAttribute('data-lang')+')';
+            }
+        });
+
+        if (~window.location.href.indexOf('http')) {
+            (function() {var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;po.src = 'https://apis.google.com/js/plusone.js';var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);})();
+            (function(d, s, id) {var js, fjs = d.getElementsByTagName(s)[0];if (d.getElementById(id)) return;js = d.createElement(s); js.id = id;js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.4&appId=114593902037957";fjs.parentNode.insertBefore(js, fjs);}(document, 'script', 'facebook-jssdk'));
+            !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
+            document.getElementById('github_social').innerHTML = '\
+                <iframe style="float:left;margin-right:15px" src="//ghbtns.com/github-btn.html?user=Pixabay&repo=JavaScript-autoComplete&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>\
+                <iframe style="float:left;margin-right:15px" src="//ghbtns.com/github-btn.html?user=Pixabay&repo=JavaScript-autoComplete&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>\
+            ';
+        }
+
+function parseCSV(file, delimiter, callback) {
+  var reader = new FileReader();
+
+  // When the FileReader has loaded the file...
+  reader.onload = function() {
+  
+    // Split the result to an array of lines
+    var lines = this.result.split('\n');
+    
+    // Split the lines themselves by the specified
+    // delimiter, such as a comma
+    var result = lines.map(function(line) {
+    	return line.split(delimiter);
+    });
+    
+    // As the FileReader reads asynchronously,
+    // we can't just return the result; instead,
+    // we're passing it to a callback function
+    callback(result);
+  };
+  
+  // Read the file content as a single string
+  reader.readAsText(file);
+}
+
+function handleFiles() {
+
+    $(document).ready(function () {
+        $.ajax({
+            type: "GET",
+            url: "assets/csv/project-grades.csv",
+            dataType: "csv",
+            success: function (data) { processData(data); }
+        });
+    });
+
+function processData(allText) {
+    var allTextLines = allText.split(/\r\n|\n/);
+    var headers = allTextLines[0].split(',');
+    var lines = [];
+
+    for (var i = 1; i < allTextLines.length; i++) {
+        var data = allTextLines[i].split(',');
+        if (data.length == headers.length) {
+
+            var tarr = [];
+            for (var j = 0; j < headers.length; j++) {
+                tarr.push(headers[j] + ":" + data[j]);
+            }
+            lines.push(tarr);
+        }
+    }
+    console.log(lines);
+    drawOutput(lines);
+}
+}
+    </script>
 
 	</body>
 </html>
